# ClientSync

client/: CMakeLists.txt  generate_project_osx.sh
client/Classes/: AppDelegate.cpp  ConnectScene.cpp  ConnectScene.hpp  Connection.cpp  Connection.hpp  Core.hpp  GameScene.cpp  GameScene.hpp  Gun.cpp  Gun.hpp
client/lib/: Callback.hpp  ReadStream.hpp  WriteStream.hpp
client/proj.android/app/: AndroidManifest.xml  build.gradle
client/proj.ios_mac/client.xcodeproj/: project.pbxproj
client/proj.ios_mac/ios/: Info.plist
client/proj.ios_mac/mac/: Info.plist
client/proj.win32/: client.sln
server/: CMakeLists.txt  generate_project_win.bat  server.7z
server/data/: game_config.json  level.json  network_config.json  room_config.json  server_config.json
server/lib/: CommonTypes.hpp  Delegate.hpp  ReadStream.hpp  WriteStream.hpp
server/src/: Callback.hpp  Level.hpp  Logger.hpp  Network.hpp  Player.hpp  ReadStream.h  ReadStream.hpp  Room.hpp  Server.hpp  WriteStream.hpp  main.cpp
server/src/config/: ConfigReader.hpp  GameConfig.hpp  JsonProcessor.hpp  NetworkConfig.hpp  RoomConfig.hpp  ServerConfig.hpp
server/src/simulator/: Platform.hpp  Player.hpp  Projectile.hpp  Simulator.hpp  Types.hpp
